# separator

./: CMakeLists.txt  README.md
cmake/: glpk.cmake.in
include/: separator.hpp  separator_glpk.hpp  separator_gurobi.hpp
src/: separator.cpp  separator_glpk.cpp  separator_gurobi.cpp  test.cpp
